<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@color/cardview_light_background"
tools:context=".AddTicketBookingActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp"
    android:background="@drawable/textfield">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="28dp">


        <TextView
            android:id="@+id/regText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_booking"
            android:textAlignment="center"
            android:textColor="#448AFF"
            android:textSize="36sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/name3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />
        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <EditText
            android:id="@+id/phoneNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <EditText
            android:id="@+id/passengerNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:drawablePadding="8dp"
            android:hint="@string/passengers"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textfield"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:padding="8dp"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:textColorHint="#5C6BC0" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:padding="18dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            android:text="Submit"
            android:textColor="#263238"
            android:textSize="18sp"
            app:cornerRadius="20dp" />



    </LinearLayout>

</androidx.cardview.widget.CardView>

<com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:itemBackground="@color/purple"
    app:itemIconTint="@drawable/selection"
    app:itemTextColor="@drawable/selection"
    app:menu="@menu/menu_navigation" />

</LinearLayout>